--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,7 @@ body{
 	transition-duration: 1.5s;
 }
 
-#gameOver{
+#vence1{
 	position: absolute;
 	top: 0;
 	border-radius: 5px;
@@ -77,6 +77,26 @@ body{
 	height: 100%;
 	background-color: rgba(0,0,0,0.5);
 	z-index: -2;
+}
+
+#vence2 {
+	position: absolute;
+	top: 0;
+	border-radius: 5px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);
+	z-index: -3;
+}
+
+#empate {
+	position: absolute;
+	top: 0;
+	border-radius: 5px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);
+	z-index: -4;
 }
 
 #imgGameOver{
